Cobalt: remove some unused test data.